# egison-prover

./: .gitignore  LICENSE  Main.hs  README.md  egison-prover.cabal  pwl.cabal
design/: pwl-ramsey.md
elisp/: egison-prover-mode.el
sample/: antisym.egi  antisym.pegi  commutativity.pegi  fin.pegi
src/Compiler/: egison-prover.hs
src/Language/: EgisonProver.hs
src/Language/EgisonProver/: AST.hs  Check.hs  Desugar.hs  Env.hs  Monad.hs  Parser.hs
