Name:                pwl
Version:             0.0.1
Synopsis:            Proof writing language (dependently typed Egison)
Description:
        Dependently typed Egison
Homepage:            http://www.egison.org
License:             MIT
License-file:        LICENSE
Author:              Satoshi Egi
Maintainer:          Satoshi Egi <egi@egison.org>
Category:            Compilers/Interpreters
Build-type:          Simple
Cabal-version:       2.0

Extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/egison/degison.git

Executable pwl
  default-language:    Haskell2010
  Main-is:             Main.hs
  Build-depends:
      base >= 4.0 && < 5
    , safe-exceptions
    , transformers
    , mtl
    , sweet-egison
  Other-modules:       Paths_pwl
  autogen-modules: Paths_pwl
  ghc-options:  -O3 -threaded -eventlog -rtsopts -Wall -Wno-name-shadowing
